fix navbar button spacing

--- a/css/home.css
+++ b/css/home.css
@@ -7,10 +7,6 @@
     background-color:#60BB6B;
 }
 
-.nav-item {
-    margin:5px;
-}
-
 #slideshow {
     position:absolute;
     top:0%;
