--- a/css/theme.css
+++ b/css/theme.css
@@ -51,6 +51,10 @@ a:visited {
     margin-left:10px;
 }
 
+.nav-item {
+    margin:5px;
+}
+
 .nav-link:visited {
     color:white;
     text-decoration: none;
